--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <title>My Personal Site</title>
+
+    <style>
+        body {
+            background-color: #f0ece2;
+        }
+
+        hr {
+            border-style: dotted none none;
+            border-width: thick;
+            width: 5%;
+            border-color: #dfd3c3;
+        }
+
+        img {
+            height: 200px;
+        }
+    </style>
 </head>
+
 <body>
     <table cellspacing="20">
         <tr>
