external css added

--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>My Personal Site</title>
-
-    <style>
-        body {
-            background-color: #f0ece2;
-        }
-
-        hr {
-            border-style: dotted none none;
-            border-width: thick;
-            width: 5%;
-            border-color: #dfd3c3;
-        }
-
-        img {
-            height: 200px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
