--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Contact Details</h1>
