--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Favourite game series</h1>
