new fonts & h1, h3 colors

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/prof-pic.jpg" alt="Tony Kowalewski - Profile Pic"></td>
+            <td><img id="prof-pic" src="images/prof-pic.jpg" alt="Tony Kowalewski - Profile Pic"></td>
             <td>
                 <h1>Tony Kowalewski</h1>
                 <p><em>An aspiring <strong>developer</strong>, gamer & geek</em></p>
